--- a/src/documents/styles/application.css.scss
+++ b/src/documents/styles/application.css.scss
@@ -11,12 +11,12 @@
 }
 
 body {
-  background: image-url('bg-transparent.png') no-repeat fixed;
+  background: url('/images/bg-transparent.png') no-repeat fixed;
 }
 
 @media (min-width: 1720px) {
   body {
-    background: image-url('bg.png') no-repeat fixed;
+    background: url('/images/bg.png') no-repeat fixed;
   }
 }
 
