--- a/src/documents/styles/application.css.scss
+++ b/src/documents/styles/application.css.scss
@@ -24,6 +24,10 @@ body {
   margin-top: 70px;
 }
 
+.page-section {
+  margin-bottom: 50px;
+}
+
 .fb-like-box {
   border: 1px gainsboro solid;
   padding: 40px 0 0 0;
