--- a/src/documents/styles/application.css.scss
+++ b/src/documents/styles/application.css.scss
@@ -63,17 +63,7 @@ body {
 }
 
 .project-box {
-  @media (min-width: 768px){
-    height: 220px;
-  }
-  @media (min-width: 980px){
-    height: 240px;
-  }
-  @media (min-width: 1200px) {
-    height: 277px;
-  }
-
-  background: #fff;
+  background: #ffffff;
   margin-bottom: 20px;
   border-radius: 5px;
 
@@ -85,5 +75,15 @@ body {
   }
   .short-description {
     padding: 10px;
+  }
+
+  @media (min-width: 768px){
+    height: 220px;
+  }
+  @media (min-width: 980px){
+    height: 240px;
+  }
+  @media (min-width: 1200px) {
+    height: 277px;
   }
 }
