--- a/src/documents/styles/application.css.scss
+++ b/src/documents/styles/application.css.scss
@@ -66,7 +66,7 @@ body {
   background: #ffffff;
   margin-bottom: 20px;
   border-radius: 5px;
-
+  
   strong {
     color: #0088cc;
   }
@@ -74,6 +74,7 @@ body {
     border-radius: 5px 5px 0 0;
   }
   .short-description {
+    border-top: 1px solid #ddd
     padding: 10px;
   }
 }
