--- a/src/documents/styles/application.css.scss
+++ b/src/documents/styles/application.css.scss
@@ -74,7 +74,7 @@ body {
     border-radius: 5px 5px 0 0;
   }
   .short-description {
-    border-top: 1px solid #ddd
+    border-top: 1px solid #ddd;
     padding: 10px;
   }
 }
