--- a/src/documents/styles/application.css.scss
+++ b/src/documents/styles/application.css.scss
@@ -1,8 +1,8 @@
 @mixin box-shadow($top, $left, $blur, $color, $inset: false) {
   @if $inset {
-    -webkit-box-shadow:inset $top $left $blur $color;
-    -moz-box-shadow:inset $top $left $blur $color;
-    box-shadow:inset $top $left $blur $color;
+    -webkit-box-shadow: inset $top $left $blur $color;
+    -moz-box-shadow: inset $top $left $blur $color;
+    box-shadow: inset $top $left $blur $color;
   } @else {
     -webkit-box-shadow: $top $left $blur $color;
     -moz-box-shadow: $top $left $blur $color;
@@ -56,7 +56,7 @@ body {
     border-color: #0088cc;
     box-shadow: 0 1px 30px rgba(0, 105, 214, 0.25);
     outline: 0;
-    outline: thin dotted    \9;
+    outline: thin dotted     \9;
     /* IE6-9 */
 
   }
@@ -66,7 +66,7 @@ body {
   background: #ffffff;
   margin-bottom: 20px;
   border-radius: 5px;
-  
+
   strong {
     color: #0088cc;
   }
@@ -84,16 +84,27 @@ body {
     height: 220px;
   }
 }
+
 @media (min-width: 980px) {
   .project-box {
     height: 240px;
   }
 }
+
 @media (min-width: 1200px) {
   .project-box {
     height: 277px;
   }
 }
 
+footer {
+  .social-media a {
+    text-decoration: none;
+    color: #444;
+    &:focus, &:hover {
+      color: #222;
+    }
+  }
+}
 
 
