--- a/src/documents/styles/application.css.scss
+++ b/src/documents/styles/application.css.scss
@@ -20,6 +20,15 @@ body {
   }
 }
 
+.navbar-fixed-top .navbar-inner .container {
+  .brand img {
+    padding: 1px 0 1px 4px;
+  }
+  .nav li a {
+    padding: 14px 15px 14px;
+  }
+}
+
 .page-header-element {
   margin-top: 70px;
 }
@@ -56,7 +65,7 @@ body {
     border-color: #0088cc;
     box-shadow: 0 1px 30px rgba(0, 105, 214, 0.25);
     outline: 0;
-    outline: thin dotted     \9;
+    outline: thin dotted      \9;
     /* IE6-9 */
 
   }
