Set "Lato" as font

--- a/src/documents/styles/application.css.scss
+++ b/src/documents/styles/application.css.scss
@@ -10,6 +10,10 @@
   }
 }
 
+body{font-family:"Lato","Helvetica Neue",Helvetica,Arial,sans-serif;}
+input,button,select,textarea{font-family:"Lato","Helvetica Neue",Helvetica,Arial,sans-serif;}
+.navbar-search .search-query{font-family:"Lato","Helvetica Neue",Helvetica,Arial,sans-serif;}
+
 body {
   background: url('/images/bg-transparent.png') no-repeat fixed;
 }
