--- a/src/documents/styles/application.css.scss
+++ b/src/documents/styles/application.css.scss
@@ -73,6 +73,16 @@ body {
     /* IE6-9 */
 
   }
+
+#startfeld a {
+    display: block;
+    width: 194px;
+    height: 50px;
+    background: url('/images/startfeld.png') top;
+    text-indent: -99999px;
+
+    &:hover {
+	background-position: bottom;
 }
 
 .project-box {
