--- a/src/documents/styles/application.css.scss
+++ b/src/documents/styles/application.css.scss
@@ -74,17 +74,19 @@ body {
 
   }
 
-#startfeld a {
-    display: block;
-    width: 194px;
-    height: 50px;
-    background: url('/images/startfeld.png') top;
-    text-indent: -99999px;
+.partners {
+    a#startfeld {
+        display: block;
+        width: 194px;
+        height: 50px;
+        background: url('/images/startfeld.png') top;
+        text-indent: -99999px;
 
-    &:hover {
-	background-position: bottom;
+        &:hover {
+	    background-position: bottom;
+        }
+    }
 }
-
 .project-box {
   background: #ffffff;
   margin-bottom: 20px;
