--- a/src/documents/styles/application.css.scss
+++ b/src/documents/styles/application.css.scss
@@ -81,12 +81,12 @@ body {
     a#startfeld {
         display: block;
         width: 193px;
-        height: 50px;
+        height: 51px;
         background: url('/images/startfeld.png') top;
         text-indent: -99999px;
 
         &:hover {
-	    background-position: bottom;
+	    background-position: 0 51px;
         }
     }
 }
