--- a/src/documents/styles/application.css.scss
+++ b/src/documents/styles/application.css.scss
@@ -1,3 +1,7 @@
+a, a:link {
+  cursor: pointer;
+}
+
 @mixin box-shadow($top, $left, $blur, $color, $inset: false) {
   @if $inset {
     -webkit-box-shadow: inset $top $left $blur $color;
@@ -10,31 +14,131 @@
   }
 }
 
-body{font-family:"Lato","Helvetica Neue",Helvetica,Arial,sans-serif;}
-input,button,select,textarea{font-family:"Lato","Helvetica Neue",Helvetica,Arial,sans-serif;}
-.navbar-search .search-query{font-family:"Lato","Helvetica Neue",Helvetica,Arial,sans-serif;}
+body {
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+input, button, select, textarea {
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.navbar-search .search-query {
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
 
 body {
-  background: url('/images/bg-transparent.png') no-repeat fixed;
+  background: url('/images/bg-transparent.png') no-repeat fixed right top;
 }
 
 @media (min-width: 1720px) {
   body {
-    background: url('/images/bg.png') no-repeat fixed;
+    background-image: url('/images/bg.png');
   }
 }
 
-.navbar-fixed-top .navbar-inner .container {
-  .brand img {
-    padding: 1px 0 1px 4px;
-  }
-  .nav li a {
-    padding: 14px 15px 14px;
+@media (max-width: 950px) {
+  body {
+    background: none;
   }
 }
 
-.page-header-element {
-  margin-top: 70px;
+.breadcrumb {
+  padding: 8px 3px;
+  background: transparent;
+}
+
+@media (min-width: 979px) {
+  .navbar-fixed-top .navbar-inner .container {
+    .brand img {
+      padding: 1px 0 1px 4px;
+    }
+    .nav li a {
+      padding: 14px 15px;
+    }
+  }
+
+  .page-header-element {
+    margin-top: 75px;
+  }
+}
+
+@media (max-width: 979px) {
+  .navbar-fixed-top {
+    margin-left: 0;
+    margin-right: 0;
+    position: fixed;
+    .navbar-inner {
+      padding: 0;
+      .container {
+        .brand img {
+          padding: 6px 0 1px 8px;
+        }
+        .nav li a {
+          padding: 19px 15px;
+        }
+      }
+    }
+  }
+
+  .page-header-element {
+    margin-top: 80px;
+  }
+}
+
+@media (min-width: 661px) {
+  .navbar .btn-navbar, .nav-small {
+    display: none;
+  }
+}
+
+@media (max-width: 660px) {
+  .navbar .btn-navbar {
+    display: block;
+    margin: 12px;
+  }
+
+  .nav-big {
+    width: 100%;
+    display: block;
+    clear: both;
+    display: none;
+
+    ul {
+      display: block;
+      padding: 0;
+      margin: 0;
+      float: none;
+      width: 100%;
+      li {
+        float: none;
+        display: block;
+        padding: 0;
+        margin: 0;
+        list-style: none;
+        border-top: 1px #eee solid;
+        &.active a {
+          background-color: #e5e5e5;
+          box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
+        }
+        a {
+          padding: 12px;
+          display: block;
+          font-size: 1.1em;
+          color: #333;
+          &:hover, &:active {
+            background: #ffffff;
+            text-decoration: none;
+            color: #000;
+          }
+        }
+      }
+    }
+  }
+
+  .navbar-fixed-top {
+
+  }
+
 }
 
 .page-section {
@@ -69,27 +173,28 @@ body {
     border-color: #0088cc;
     box-shadow: 0 1px 30px rgba(0, 105, 214, 0.25);
     outline: 0;
-    outline: thin dotted        \9;
+    outline: thin dotted \9;
     /* IE6-9 */
 
   }
 }
 
 .partners {
-    margin-top: 2em;
+  margin-top: 2em;
 
-    a#startfeld {
-        display: block;
-        width: 195px;
-        height: 52px;
-        background: url('/images/startfeld.png') 0px -1px no-repeat;
-        text-indent: -99999px;
+  a#startfeld {
+    display: block;
+    width: 195px;
+    height: 52px;
+    background: url('/images/startfeld.png') 0px -1px no-repeat;
+    text-indent: -99999px;
 
-        &:hover {
-	    background-position: 0px -52px;
-        }
+    &:hover {
+      background-position: 0px -52px;
     }
+  }
 }
+
 .project-box {
   background: #ffffff;
   margin-bottom: 20px;
@@ -113,7 +218,7 @@ body {
   }
 }
 
-.profile-collapse-summary a{
+.profile-collapse-summary a {
   text-decoration: none;
   font-weight: bold;
 }
