--- a/src/documents/styles/application.css.scss
+++ b/src/documents/styles/application.css.scss
@@ -241,6 +241,29 @@ body {
   }
 }
 
+.new-office-registration {
+  width: 79%;
+  min-height: 860px;
+}
+
+@media (max-width: 950px) {
+  .new-office-registration {
+    width: 100%;
+  }
+}
+
+@media (max-width: 500px) {
+  .new-office-registration {
+    min-height: 960px;
+  }
+}
+
+@media (max-width: 450px) {
+  .new-office-registration {
+    min-height: 1120px;
+  }
+}
+
 footer {
   .social-media a {
     text-decoration: none;
