separate news template

--- a/src/documents/styles/application.css.scss
+++ b/src/documents/styles/application.css.scss
@@ -155,6 +155,15 @@ body {
   height: 100%;
 }
 
+.news-item {
+  .image {
+    margin-top: 20px;
+    img {
+      max-width: 100%;
+    }
+  }
+}
+
 .project-box-link {
   display: block;
 
