migrate all news articles to new format

--- a/src/documents/styles/application.css.scss
+++ b/src/documents/styles/application.css.scss
@@ -156,8 +156,10 @@ body {
 }
 
 .news-item {
+  margin: 0 0 20px 0;
   .image {
     margin-top: 20px;
+    text-align: center;
     img {
       max-width: 100%;
     }
