--- a/src/documents/styles/application.css.scss
+++ b/src/documents/styles/application.css.scss
@@ -234,6 +234,12 @@ body {
   font-weight: bold;
 }
 
+@media (max-width: 450px) {
+  .carousel-caption {
+    height: 225px;
+  }
+}
+
 @media (min-width: 768px) {
   .project-box {
     height: 220px;
