--- a/src/documents/styles/application.css.scss
+++ b/src/documents/styles/application.css.scss
@@ -234,6 +234,38 @@ body {
   font-weight: bold;
 }
 
+.team-member {
+  margin-bottom: 50px;
+  .job-title {
+    &.break {
+      display: none;
+    }
+    @media (min-width: 768px) and (max-width: 979px) {
+      &.break {
+        display: block;
+      }
+      &.normal {
+        display: none;
+      }
+    }
+    margin-top: 10px;
+  }
+  .email-address {
+    margin-bottom: 12px;
+  }
+  blockquote {
+    @media (min-width: 768px) {
+      min-height: 130px;
+    }
+    @media (min-width: 980px) {
+      min-height: 110px;
+    }
+    @media (min-width: 1200px) {
+      min-height: 90px;
+    }
+  }
+}
+
 @media (min-width: 768px) {
   .project-box {
     height: 220px;
