add milky hover effect on references

--- a/src/documents/styles/application.css.scss
+++ b/src/documents/styles/application.css.scss
@@ -221,6 +221,10 @@ body {
     border-top: 1px solid #ddd;
     padding: 10px;
   }
+
+  &.milky img {
+    opacity: 0.5;
+  }
 }
 
 .profile-social-links {
