--- a/src/documents/styles/application.css.scss
+++ b/src/documents/styles/application.css.scss
@@ -288,6 +288,65 @@ body {
   }
 }
 
+.customer-survey {
+  width: 79%;
+  min-height: 1838px;
+}
+
+@media (max-width: 950px) {
+  .customer-survey {
+    width: 100%;
+  }
+}
+
+@media (max-width: 500px) {
+  .customer-survey {
+    min-height: 1988px;
+  }
+}
+
+@media (max-width: 450px) {
+  .customer-survey {
+    min-height: 2072px;
+  }
+}
+
+@media (max-width: 350px) {
+  .customer-survey {
+    min-height: 2492px;
+  }
+}
+
+.gettogethers-registration {
+  width: 79%;
+  min-height: 1320px;
+}
+
+@media (max-width: 950px) {
+  .gettogethers-registration {
+    width: 100%;
+  }
+}
+
+@media (max-width: 500px) {
+  .gettogethers-registration {
+    min-height: 1420px;
+  }
+}
+
+@media (max-width: 450px) {
+  .gettogethers-registration {
+    min-height: 1480px;
+  }
+}
+
+@media (max-width: 350px) {
+  .gettogethers-registration {
+    min-height: 1780px;
+  }
+}
+
+
 .new-office-registration {
   width: 79%;
   min-height: 1320px;
