--- a/src/documents/styles/application.css.scss
+++ b/src/documents/styles/application.css.scss
@@ -377,6 +377,19 @@ body {
 }
 
 footer {
+  @media (max-width: 767px) {
+    margin: 0 -20px;
+  }
+
+  .footer--main {
+    @media (max-width: 767px) {
+      padding: 0 20px;
+    }
+
+    background: #e4eef6;
+    border-top: 1px solid #D1E2F0;
+  }
+
   .social-media a {
     text-decoration: none;
     color: #444;
