add existing header / footer

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,47 @@
   <meta name="robots" content="index, follow"/>
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/fontawesome/4.6.3/css/font-awesome.min.css"
+        integrity="sha256-AIodEDkC8V/bHBkfyxzolUMw57jeQ9CauwhVW6YJ9CA=" crossorigin="anonymous">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+
+  <link rel="shortcut icon" type="image/x-icon" href="/ico/favicon.ico">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/ico/apple-touch-icon-144-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/ico/apple-touch-icon-114-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/ico/apple-touch-icon-72-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/ico/apple-touch-icon-57-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" href="/ico/apple-touch-icon.png">
+
+  <link href='//fonts.googleapis.com/css?family=Lato:400,900' rel='stylesheet' type='text/css'>
+
+  <!--
+
+                    `..-    `///:-.`
+               `-:+oooooo:`  `/yhhhhyo/-`
+            .:+ooooooooooo/    -hhhhhhhhhs/`
+         `:+oooooooooooo+.   .ohhhhhhhhhhhhho-
+       `:ooooooooooo+/:.     -::/+syhhhhhhhhhhs.
+      .+oooooooo+/-`               `-/shhhhhhhhh+`    		Wir suchen Web-Entwickler!
+     -oooooooo+-`                      -ohhhhhhhhs`
+    :oooooooo:`                          -yhhhhhhhs`  		Besitzt du Know-How in Ruby on Rails,
+   .oooooooo.                             `ohhhhhhho  		HTML5 oder JavaScript?
+   +ooooooo.                               `yhhhhhhh- 		Du möchtest parallel zum Studium arbeiten?
+  .ooooooo/                                 -hhhhhhho 		Du möchtest auch von zu Hause aus arbeiten?
+  -ooooooo-                                  hhhhhhhy
+  -ooooooo-                                  hhhhhhhy
+  .ooooooo:                                 .hhhhhhhs 		Dann sende uns deine vollständigen
+  `oooooooo`                                ohhhhhhh/ 		Unterlagen an jobs@renuo.ch
+   :ooooooo+`                              /hhhhhhhy`
+    /ooooooo+.                           `+hhhhhhhh-  		Wir freuen uns auf dich!
+    `/oooooooo:`                       `:yhhhhhhhh-
+      :ooooooooo/.`                  ./yhhhhhhhhy.
+       .+ooooooooo+/:-.``       .-/oyhhhhhhhhhh/`
+         -+oooooooooooooo/`   .ohhhhhhhhhhhhh+`
+           .:+ooooooooo/.   -ohhhhhhhhhhhhs:`
+              .:/oooooo+-   .+hhhhhhhhy+:`
+                  `.-://+/.   `+o+/:.`
+
+
+  -->
 </head>
