--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,20 @@
 
     {% include footer.html %}
 
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-34098642-1', 'auto');
+      ga('set', 'anonymizeIp', true);
+      ga('require', 'displayfeatures');
+      ga('send', 'pageview');
+    </script>
+    <script type="text/javascript" async defer src="https://apis.google.com/js/platform.js?publisherid=116149986375247666043"></script>
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/jquery/3.0.0/jquery.min.js"
+            integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
   </body>
 
 </html>
