--- a/src/documents/styles/application.css.scss
+++ b/src/documents/styles/application.css.scss
@@ -414,22 +414,16 @@ footer {
 }
 
 .testimonial-quotations {
+  display: flex;
+  flex-wrap: wrap;
+
   .span4 {
+    display: flex;
+    flex-direction: column;
     background-color: #f7f7f7;
-    height: 450px;
     padding: 30px;
-
-    @media (max-width: $screen-md-max) {
-      height: 540px;
-    }
-
     @media (max-width: $screen-sm-max) {
-      height: 340px;
       margin-bottom: 10px;
-    }
-
-    @media (max-width: $screen-xs-max) {
-      height: 450px;
     }
   }
 
@@ -447,20 +441,11 @@ footer {
   }
 
   .testimonials-sentence {
-    height: 210px;
-    margin-top: 20px;
-
-    @media (max-width: $screen-md-max) {
-      height: 310px;
-    }
-
-    @media (max-width: $screen-sm-max) {
-      height: 120px;
-    }
-
-    @media (max-width: $screen-xs-max) {
-      height: 210px;
-    }
+    flex: 1;
+    display: flex;
+    align-items: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
   }
 
   img {
